...
    <string name="main_settings">Settings</string>
    <string name="main_yourpoints">Your Points: %d</string>


    <!-- WhiteTiles Strings -->
    <string name="WhiteTilesYour0Points">Your Points: 0</string>
    <string name="WhiteTilesYourPoints">Your Points:\u0020</string>

    <string name="wordfile">words_en.json</string>

    <string name="hm_default_words">["hangman", "paper", "application", "mobile", "laptop", "mountain", "flower", "backpack", "racecar"]</string>
    <string name="sett_wordlen">Word can have maximal 11 chars</string>
    <string name="sett_wordinvalid">Word can only use ascii characters</string>
...
